--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Pizza</h1>
+    <img src="https://www.foodandwine.com/thmb/4qg95tjf0mgdHqez5OLLYc0PNT4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/classic-cheese-pizza-FT-RECIPE0422-31a2c938fc2546c9a07b7011658cfd05.jpg" alt="a gooey and bubbly cheese pizza">
 </body>
 </html>
