--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
    <h1>Odin Recipes</h1> 
-   <a href="./recipes/pizza.html">Pizza recipe</a>
+   <ul>
+    <li><a href="./recipes/pizza.html">Pizza recipe</a></li>
+    <li><a href="./recipes/tacos.html">Tacos recipe</a></li>
+   </ul>
 </body>
 </html>
