Resized taco image

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Tacos</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb6OzQIvUOMPJ_XoMDgJvn4zpOdyXalfxHhUt1_OycSQ&s" alt="crispy birria tacos with consomme on the side">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb6OzQIvUOMPJ_XoMDgJvn4zpOdyXalfxHhUt1_OycSQ&s" alt="crispy birria tacos with consomme on the side" width="510" height="310">
 </body>
 </html>
