Added korean beef bowl image

--- a/recipes/korean-beef.html
+++ b/recipes/korean-beef.html
@@ -6,6 +6,7 @@
     <title>Easy Korean Beef Bowl</title>
 </head>
 <body>
-    
+    <h1>Easy Korean Beef Bowl</h1>
+    <img src="https://www.allrecipes.com/thmb/4PIcvZvGnfgoJvVoQW7lXoLWbG8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5759837-b2371603be79499c9e1cfa7eeefc7b25.jpg" alt="korean beef bowl with rice" height="510" width="510">
 </body>
 </html>
