Added link to Korean beef in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <ul>
     <li><a href="./recipes/pizza.html">Pizza recipe</a></li>
     <li><a href="./recipes/tacos.html">Tacos recipe</a></li>
+    <li><a href="./recipes/korean-beef.html">Korean Beef recipe</a></li>
    </ul>
 </body>
 </html>
