Added ingredients heading

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -10,6 +10,7 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb6OzQIvUOMPJ_XoMDgJvn4zpOdyXalfxHhUt1_OycSQ&s" alt="crispy birria tacos with consomme on the side" width="510" height="310">
     <h2>Crispy Smoked Birria Tacos</h2>
     <p>This recipe is for delicious crispy smoked birria tacos done in an untraditional way! If you're interested in learning how to make them, these are the ingredients that you will need.</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>3-5 pounds of chuck roast (depending on how much you are wanting to make)</li>
         <li>3 dried chiles</li>
