Added directions heading

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -23,6 +23,7 @@
         <li>Shredded quesadilla cheese</li>
     </ul>
     <p>Once you have your ingredients ready, go ahead and grab yourself an aluminum pan and prepare to assemble</p>
+    <h2>Directions</h2>
     <ol>
         <li>Cut the chuck roast into smaller cube sections</li>
         <li>Place the cut up chuck roast into the aluminum pan</li>
