Added ingredients heading

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,6 +10,7 @@
     <img src="https://www.foodandwine.com/thmb/4qg95tjf0mgdHqez5OLLYc0PNT4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/classic-cheese-pizza-FT-RECIPE0422-31a2c938fc2546c9a07b7011658cfd05.jpg" alt="a gooey and bubbly cheese pizza">
     <h2>Ooey Gooey Cheesy Pizza</h2>
     <p>For this recipe we are first going to need a few things</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>Pizza Dough</li>
         <li>Fresh Pizza Sauce</li>
