--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -19,6 +19,7 @@
         <li>Red Pepper Flakes (if you like it spicy)</li>
     </ul>
     <p>Once you have all of your ingredients lined up and ready to go then you are ready to begin.</p>
+    <h2>Directions</h2>
     <ol>
         <li>Stretch your pizza dough to the size desired</li>
         <li>Use you utensil of choice to spread your sauce on the pizza dough</li>
