Added css styling to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
-   <h1>Odin Recipes</h1> 
-   <ul>
+   <h1 id="header">Odin Recipes</h1> 
+   <ul class="recipe-list">
     <li><a href="pizza.html">Pizza recipe</a></li>
     <li><a href="tacos.html">Tacos recipe</a></li>
     <li><a href="korean-beef.html">Korean Beef recipe</a></li>
