Added more css to all files

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-   <h1 id="header">Odin Recipes</h1> 
+   <h1 id="header" class="main-header">Odin Recipes</h1> 
    <ul class="recipe-list">
     <li><a href="pizza.html">Pizza recipe</a></li>
     <li><a href="tacos.html">Tacos recipe</a></li>
