--- a/src/pizza.html
+++ b/src/pizza.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1 id="header" class="big-header">Pizza</h1>
     <img src="https://www.foodandwine.com/thmb/4qg95tjf0mgdHqez5OLLYc0PNT4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/classic-cheese-pizza-FT-RECIPE0422-31a2c938fc2546c9a07b7011658cfd05.jpg" alt="a gooey and bubbly cheese pizza">
-    <h2>Ooey Gooey Cheesy Pizza</h2>
+    <h2 class="pizza recipes">Ooey Gooey Cheesy Pizza</h2>
     <p>For this recipe we are first going to need a few things</p>
-    <h2>Ingredients</h2>
+    <h2 class="pizza recipes">Ingredients</h2>
     <ul>
         <li>Pizza Dough</li>
         <li>Fresh Pizza Sauce</li>
@@ -19,7 +20,7 @@
         <li>Red Pepper Flakes (if you like it spicy)</li>
     </ul>
     <p>Once you have all of your ingredients lined up and ready to go then you are ready to begin.</p>
-    <h2>Directions</h2>
+    <h2 class="pizza recipes">Directions</h2>
     <ol>
         <li>Stretch your pizza dough to the size desired</li>
         <li>Use you utensil of choice to spread your sauce on the pizza dough</li>
