--- a/src/tacos.html
+++ b/src/tacos.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos</title>
 </head>
 <body>
-    <h1>Tacos</h1>
+    <h1 id="header">Tacos</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb6OzQIvUOMPJ_XoMDgJvn4zpOdyXalfxHhUt1_OycSQ&s" alt="crispy birria tacos with consomme on the side" width="510" height="310">
-    <h2>Crispy Smoked Birria Tacos</h2>
+    <h2 class="taco recipes">Crispy Smoked Birria Tacos</h2>
     <p>This recipe is for delicious crispy smoked birria tacos done in an untraditional way! If you're interested in learning how to make them, these are the ingredients that you will need.</p>
-    <h2>Ingredients</h2>
+    <h2 class="taco recipes">Ingredients</h2>
     <ul>
         <li>3-5 pounds of chuck roast (depending on how much you are wanting to make)</li>
         <li>3 dried chiles</li>
@@ -23,7 +24,7 @@
         <li>Shredded quesadilla cheese</li>
     </ul>
     <p>Once you have your ingredients ready, go ahead and grab yourself an aluminum pan and prepare to assemble</p>
-    <h2>Directions</h2>
+    <h2 class="taco recipes">Directions</h2>
     <ol>
         <li>Cut the chuck roast into smaller cube sections</li>
         <li>Place the cut up chuck roast into the aluminum pan</li>
@@ -37,6 +38,6 @@
         <li>Add the tortilla and cheese with some meat on top</li>
         <li>Fold over tortilla and cook until crispy</li>
     </ol>
-    <p>And that's it! Once your done, serve it up with a side of the consomme juice (I like to take everything leftover and blend into more of a sauce</p>
+    <p>And that's it! Once your done, serve it up with a side of the consomme juice (I like to take everything leftover and blend into more of a sauce)</p>
 </body>
 </html>
